fix z-index issues

--- a/app/assets/stylesheets/shared/tabs.scss
+++ b/app/assets/stylesheets/shared/tabs.scss
@@ -20,10 +20,6 @@
 
   gap: var(--prx-tabs-nav-gap);
 
-  &.sticky-md-top {
-    z-index: $zindex-dropdown;
-  }
-
   .context-menu {
     display: none;
     position: absolute;
